tests/frontend/pass/array/cross_contract.act
contract B

contract A

constructor
interface constructor()

creates

  uint[3] ar := [1,2,3]



constructor
interface constructor(address<A> a)

creates

  uint y := a.ar[2]
