tests/frontend/fail/array/mistyped_access.act
contract M

constructor
interface constructor()

creates

  uint[3] a := [1,2,3]


transition f
interface f()

iff

  a[1 > 3] > 4

returns 1
